# discord-ai

./: .gitignore  README.md  ai.py  bot.py  botconfig.json  database.py  models.json  pyproject.toml  utils.py
